Redesign portfolio analytics around constructors